# Baskerville

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
app/: animation.h  app.h  debug.h  editor.h  label.h  project.h  redraw.h  renderable.h  root.h  widget.h
app/src/: app.cpp  debug.cpp  editor.cpp  label.cpp  menu.cpp  project.cpp  renderable.cpp  root.cpp  widget.cpp
app_legacy/: app.h  editor.h  label.h  menu.h  project.h  root.h
app_legacy/src/: editor.cpp  project.cpp  root.cpp
core/: cache.h  common.h  data_path.h  draw.h  draw_box.h  draw_call.h  draw_context.h  draw_quad.h  draw_redraw_flag.h  draw_vertex.h  event.h  font.h  lerp.h  meta.h  platform.h  redraw_flag.h  renderer.h  shader.h  shader_src.h  sprite.h  type_index.h  vertex.h  widget.h  window.h
core/shader/: box_draw.vert  debug_draw.frag  debug_draw.vert  msdf.frag  msdf.vert  msdf_draw.frag  msdf_draw.vert  pane.frag  pane.vert
core/src/: cache.cpp  draw_context.cpp  event.cpp  font.cpp  meta.cpp  platform.cpp  renderer.cpp  shader.cpp  type_index.cpp  widget.cpp  window.cpp
dep/duckx/lib/: duckx.lib
dep/duckx/lib/Debug/: duckx.lib
dep/duckx/lib/Release/: duckx.lib
dep/glad/: glad.h
dep/glad/src/: glad.c
dep/msdfgen/core/: SignedDistance.cpp  SignedDistance.h  contour-combiners.cpp
dep/nfd/lib/: nfd.lib
widget/: anchor_test_box.h  baskerville.h  chapter_number.h  editor.h  font_render_test.h  label.h  root.h  single_char.h  test.h
widget/src/: anchor_test_box.cpp  baskerville.cpp  chapter_number.cpp  editor.cpp  font_render_test.cpp  label.cpp  root.cpp  single_char.cpp  test.cpp
widget/test/: anchor_test_box.h  font_render_test.h
widget/test/src/: anchor_test_box.cpp  font_render_test.cpp
